SourceMetaData/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Current_Correspondence_Address__c</fullName>
        <description>The primary address of the person</description>
        <inlineHelpText>The primary address of the person</inlineHelpText>
        <label>Primary Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Flagged__c</fullName>
        <description>The date that the individual was flagged</description>
        <inlineHelpText>Flag was recorded on this date</inlineHelpText>
        <label>Date Flagged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Events_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this Account is an Events customer</description>
        <inlineHelpText>Checked if this Account is an Events customer</inlineHelpText>
        <label>Events Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Duration__c</fullName>
        <description>How long an individual is being flagged for.</description>
        <inlineHelpText>How long an individual is being flagged for.</inlineHelpText>
        <label>Flag Duration (months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Expiration_Date__c</fullName>
        <description>The date at which the flag on the individual lapses</description>
        <formula>CASE(Flag_Duration__c, 
&quot;1&quot;, Date_Flagged__c  +  30 * 1, 
&quot;2&quot;, Date_Flagged__c  +  30 * 2, 
&quot;3&quot;, Date_Flagged__c  +  30 * 3, 
&quot;6&quot;, Date_Flagged__c  +  30 * 6,
&quot;12&quot;, Date_Flagged__c  +  30 * 12,
&quot;24&quot;, Date_Flagged__c  +  30 * 24,
NULL)</formula>
        <inlineHelpText>The date at which the flag on the individual lapses</inlineHelpText>
        <label>Flag Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flagged__c</fullName>
        <description>Checked if a person has an active flag against them</description>
        <formula>!ISBLANK(Reasons_for_flagging__c) &amp;&amp; (   TODAY() &lt; Flag_Expiration_Date__c ||  ISBLANK(Flag_Expiration_Date__c ) )</formula>
        <inlineHelpText>Checked if there is a warning about a customer</inlineHelpText>
        <label>Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal Customer = Hounslow Council
External Customer = Lampton 360 ltd</inlineHelpText>
        <label>Internal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Correspondence_Addresses__c</fullName>
        <inlineHelpText>How many correspondence addresses are linked with this person?</inlineHelpText>
        <label>Number of Correspondence Addresses</label>
        <summaryFilterItems>
            <field>PersonAddressLookup__c.Correspondence_Address__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PersonAddressLookup__c.Related_Person__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Person_Preferred_Contact_Method__c</fullName>
        <description>The default preferred method of communication for a person (sets default preferred contact method on case)</description>
        <inlineHelpText>The default preferred method of communication for a person (sets default preferred contact method on case)</inlineHelpText>
        <label>Person Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>No Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <inlineHelpText>Rag rate of the customer relationship
Red= Low
Amber= Medium
Green=High</inlineHelpText>
        <label>RAG Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reasons_for_flagging__c</fullName>
        <description>Reasons for which an individual may be flagged</description>
        <inlineHelpText>Reasons for which an individual may be flagged</inlineHelpText>
        <label>Reasons for flagging</label>
        <picklist>
            <picklistValues>
                <fullName>Abusive (Customers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abusive (Staff)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threatening (Customer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threatening (Staff)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violent (Customers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violent (Staff)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sub_Types__c</fullName>
        <label>Sub Types</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Primary Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umbrella Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent (Primary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent (Secondary)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <description>The Ward in which the customer is eligable to vote within</description>
        <inlineHelpText>The Ward in which the customer is eligable to vote within</inlineHelpText>
        <label>Ward</label>
        <picklist>
            <picklistValues>
                <fullName>Bedfont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brentford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiswick Homefields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiswick Riverside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cranford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feltham North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feltham West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanworth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanworth Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heston Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heston East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heston West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hounslow West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isleworth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osterley and Spring Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnham Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Councillors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Salutation_Full_Name__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>Current_Correspondence_Address__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Councillor</value>
        </filters>
        <label>All Councillors</label>
    </listViews>
    <listViews>
        <fullName>All_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Salutation_Full_Name__pc</columns>
        <columns>PC_PHONE4</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>Current_Correspondence_Address__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>All_MPs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Salutation_Full_Name__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>Current_Correspondence_Address__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>MP</value>
        </filters>
        <label>All MPs</label>
    </listViews>
    <listViews>
        <fullName>All_People</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Current_Correspondence_Address__pc</columns>
        <columns>PC_PHONE4</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All People</label>
    </listViews>
    <listViews>
        <fullName>Business_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Types__c</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Events_Customer__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Organisations</label>
    </listViews>
    <listViews>
        <fullName>Charities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Types__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Charity</value>
        </filters>
        <label>Charities</label>
    </listViews>
    <listViews>
        <fullName>Councillors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Salutation_Full_Name__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>Current_Correspondence_Address__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Councillor,MP</value>
        </filters>
        <label>Councillors</label>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Salutation_Full_Name__pc</columns>
        <columns>PC_PHONE4</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>Current_Correspondence_Address__c</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>Events_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Current_Correspondence_Address__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Events_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Events Customers</label>
    </listViews>
    <listViews>
        <fullName>LBH_Suppliers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Types__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>LBH Supplier</value>
        </filters>
        <label>LBH Suppliers</label>
    </listViews>
    <listViews>
        <fullName>Local_Authorities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Types__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Local Authority</value>
        </filters>
        <label>Local Authorities</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Other_Public_Sector</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Types__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Other Public Sector</value>
        </filters>
        <label>Other Public Sector</label>
    </listViews>
    <listViews>
        <fullName>Person_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_PHONE3</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>Private_Sector</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Sub_Types__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>RAG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Private Business(250+ Employees)</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Small Business(0-50 employees)</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>SME(51-250 employees)</value>
        </filters>
        <label>Private Sector</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01Ib0000000IJOKEA4_00Nb0000002zU6KEAU</fullName>
        <active>true</active>
        <field>PersonAddressLookup__c.Related_Person__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Person Address Lookup_Related Person</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000IJhdEAG_00Nb0000003cZtMEAU</fullName>
        <active>true</active>
        <errorMessage>Cannot be a person account.</errorMessage>
        <field>Target__c.Account__c</field>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Target_Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ib0000000IJhsEAG_00Nb0000002zUGDEA2</fullName>
        <active>true</active>
        <field>Interaction__c.Account__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Interation_Customer</name>
    </namedFilters>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>LBH and other accounts such as vendors</description>
        <label>Business Account</label>
    </recordTypes>
    <validationRules>
        <fullName>No_more_than_1_correspondence_address</fullName>
        <active>true</active>
        <description>Only 0 or 1 correspondence addresses are allowed (as in the PAL object). Ideally only 1 should be allowed, but 0 is allowed too because the user must uncheck 1 address first before checking another.</description>
        <errorConditionFormula>Number_of_Correspondence_Addresses__c &gt; 1</errorConditionFormula>
        <errorMessage>No more than 1 correspondence address is allowed for this person.</errorMessage>
    </validationRules>
</CustomObject>